<resources>
    <string name="app_name">My Application</string>
    <string name="txtWelcome">Bem-Vindo(a) ao EcoTrack!</string>
    <string name="cntMascot">Mascote do EcoTrack</string>
    <string name="txtInstruction">Para começar, digite seu nome</string>
    <string name="txtHintName"> Digite seu nome </string>
    <string name="txtBtnStart"> Começar! </string>
    <string name="dcspbackArrow"> Voltar </string>

    <string name="txtIntroduction"> O EcoTrack é um app que te auxilia a preservar o nosso planeta. </string>
    <string name="txtOption"> Qual opção você deseja explorar primeiro? </string>
    <string name="txtBtnWater"> 💧 Água </string>
    <string name="txtBtnEletricity"> 💡 Eletricidade </string>
    <string name="txtBtnCarbon"> 👣 Pegada de Carbono </string>

    <string name="txtWater"> Água 💧 </string>
    <string name="txtMaquina"> Quantas vezes você utiliza a máquina de lavar por SEMANA? </string>
    <string name="txtHintMaquina"> Ex: 2 </string>
    <string name="txtTanque"> Por quantos minutos você usa o tanque por DIA? </string>
    <string name="txtHintTanque"> Ex: 10 </string>
    <string name="txtDescarga"> Quantas vezes você dá descarga por DIA? </string>
    <string name="txtHintDescarga"> Ex: 3 </string>
    <string name="txtPia"> Por quantos minutos você usa a pia do banheiro por DIA? </string>
    <string name="txtHintPia"> Ex: 5 </string>
    <string name="txtChuveiro"> Por quantos minutos você deixa o chuveiro ligado por DIA? </string>
    <string name="txtHintChuveiro"> Ex: 20 </string>
    <string name="txtCozinha"> Por quantos minutos você usa a pia da cozinha por DIA? </string>
    <string name="txtHintCozinha"> Ex: 15 </string>
    <string name="txtLavaLouca"> Quantas vezes você utiliza a lava-louças por SEMANA? </string>
    <string name="txtHintLavaLouca"> Ex: 6 </string>
    <string name="txtBtnDados"> Enviar Dados </string>

    <string name="txtEletricidade"> Eletricidade 💡 </string>
    <string name="txtAparelhos"> Escolha os aparelhos que você utiliza: </string>
    <string-array name="arrayPerguntaAparelho">
        <item> -- Selecione -- </item>
        <item> Ar-condicionado </item>
        <item> Aparelho de som </item>
        <item> Aspirador </item>
        <item> Batedeira </item>
        <item> Cafeteira </item>
        <item> Carregador de celular </item>
        <item> Chuveiro </item>
        <item>  Computador </item>
        <item> Exaustor </item>
        <item> Ferro de passar roupa </item>
        <item> Freezer </item>
        <item> Geladeira </item>
        <item>  Grill </item>
        <item> Lâmpada fluorescente </item>
        <item> Lâmpada incandescente </item>
        <item> Liquidificador </item>
        <item>  Máquina de lavar </item>
        <item>  Microondas </item>
        <item> Sanduicheira </item>
        <item> Secador de cabelo </item>
        <item> Televisor </item>
        <item> Telefone sem fio </item>
        <item> Torradeira </item>
        <item> Ventilador </item>
        <item> Videogame </item>
    </string-array>
    <string name="txtTempo"> Tempo de uso diário (horas): </string>
    <string name="txtHintTempo"> Ex: 2.5 </string>
    <string name="txtSelecionados"> Dispositivos Selecionados </string>
    <string name="txtBtnAdicionar"> Adicionar dispositivo </string>


    <string name="txtCarbono"> Pegada de Carbono 👣 </string>
    <string name="txtPerguntaEnergia"> Quantos kWh de eletricidade você consome em média por MÊS? </string>
    <string name="txtHintPerguntaEnergia"> Ex: 153 </string>
    <string name="txtPerguntaTransporte"> Quantos quilômetros você viaja por MÊS usando transporte público? </string>
    <string name="txtHintPerguntaTransporte"> Ex: 20 </string>
    <string name="txtPerguntaVeiculo"> Quantos quilômetros você dirige com seu veículo pessoal por MÊS? </string>
    <string name="txtHintPerguntaVeiculo"> Ex: 60 </string>
    <string name="txtPerguntaDieta"> Qual dessas opções melhor descreve sua dieta? </string>
    <string-array name="arrayPerguntaDieta">
        <item> -- Selecione -- </item>
        <item>Vegetariana</item>
        <item>Vegana</item>
        <item>Onívora com baixo consumo de carne</item>
        <item>Onívora com alto consumo de carne</item>
    </string-array>
    <string name="txtPerguntaPlastico"> Quantos produtos de plástico de uso único (garrafas, sacolas, copos) você utiliza por MÊS? </string>
    <string name="txtHintPerguntaPlastico"> Ex: 20 </string>
    <string name="txtPerguntaAviao"> Quantas viagens aéreas de longa distância você faz por ANO? </string>
    <string name="txtHintPerguntaAviao"> Ex: 4 </string>
    <string name="txtBtnCalcularCarbono"> Calcular </string>

    <string name="txtOnu"> Consumo Diário Recomendado pela ONU (por pessoa) - 110L </string>
    <string name="txtConsumoMedio"> Seu Consumo Médio Total Diário = </string>
    <string name="txtConsumos"> Seus Consumos </string>
    <string name="txtConsumoMaquina"> Máquina de Lavar - </string>
    <string name="txtConsumoTanque"> Tanque - </string>
    <string name="txtConsumoDescarga"> Descarga - </string>
    <string name="txtConsumoBanheiro"> Pia do Banheiro - </string>
    <string name="txtConsumoChuveiro"> Chuveiro - </string>
    <string name="txtConsumoCozinha"> Pia da Cozinha - </string>
    <string name="txtConsumoLavaLouca"> Lava Louças - </string>
    <string name="txtResultado"> Conclusão</string>
    <string name="txtBtnProsseguir"> Prosseguir (Dicas)</string>
    <string name="txtMediaEnergia"> Consumo Diário Recomendado (por pessoa)  - 7 kWh </string>
    <string name="txtMedioCarbono"> Consumo Diário Recomendado (por pessoa) - 4,8 kg </string>

    <string name="txtDeVolta"> Bem-Vindo(a), Fulano</string>
    <string name="welcome_message">Bem-vindo(a), %1$s!</string>
    <string name="txtSobre">Sobre o App</string>
    <string name="txtDevolver">  Desenvolvido por Guilherme S. Molina para a 5ª Edição da WECTI - Inteligência Artificial para Um Futuro Sustentável: Inovação, Impacto e Oportunidades </string>
    <string name="appwidget_text">EcoTrack Status</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>

    <string name="txtHistorico"> Seu Histórico ⏰ </string>
    <string name="txtBtnHistorico"> ⏰ Histórico </string>


</resources>