<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".answers.AnswerWater"
    android:fillViewport="true"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <TextView
            android:id="@+id/txtWater"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtWater"
            android:textColor="#1E3A5F"
            android:textSize="44sp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/txtOnu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtOnu"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="#1E3A5F"
            android:textAlignment="center" />

        <ImageView
            android:id="@+id/imgRabbit"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/rabbit"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="0dp"/>

        <TextView
            android:id="@+id/txtConsumos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtConsumos"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#1E3A5F"
            android:textAlignment="center" />

        <!-- Lista de aparelhos abaixo de txtConsumos -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:paddingStart="16dp">

            <TextView
                android:id="@+id/txtConsumoMaquina"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtConsumoMaquina"
                android:layout_marginBottom="8dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="#1E3A5F" />

            <TextView
                android:id="@+id/txtConsumoTanque"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtConsumoTanque"
                android:layout_marginBottom="8dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="#1E3A5F" />

            <TextView
                android:id="@+id/txtConsumoDescarga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtConsumoDescarga"
                android:layout_marginBottom="8dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="#1E3A5F" />

            <TextView
                android:id="@+id/txtConsumoBanheiro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtConsumoBanheiro"
                android:layout_marginBottom="8dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="#1E3A5F" />

            <TextView
                android:id="@+id/txtConsumoChuveiro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtConsumoChuveiro"
                android:layout_marginBottom="8dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="#1E3A5F" />

            <TextView
                android:id="@+id/txtConsumoCozinha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtConsumoCozinha"
                android:layout_marginBottom="8dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="#1E3A5F" />

            <TextView
                android:id="@+id/txtConsumoLavaLouca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtConsumoLavaLouca"
                android:layout_marginBottom="8dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="#1E3A5F" />

        </LinearLayout>

        <TextView
            android:id="@+id/txtTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtConsumoMedio"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#1E3A5F"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/txtResultado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtResultado"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#1E3A5F"
            android:textAlignment="center" />

        <!-- Botão de envio -->
        <Button
            android:id="@+id/btnProsseguir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtBtnProsseguir"
            android:layout_marginTop="20dp"
            android:backgroundTint="#1E3A5F"
            android:background="@drawable/rounded_button"
            android:textColor="#FFFFFF"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>

</ScrollView>