<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".Welcome">

    <!-- Boas vindas -->
    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/txtWelcome"
        android:textAlignment="center"
        android:textColor="#006400"
        android:textSize="25sp"
        android:textStyle="bold" />

    <!-- Imagem  -->
    <ImageView
        android:id="@+id/imgMascot"
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:src="@drawable/mascot"
        android:contentDescription="@string/cntMascot"
        android:layout_marginTop="20dp" />

    <!-- Instrução  -->
    <TextView
        android:id="@+id/txtInstruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#006400"
        android:text="@string/txtInstruction"
        android:textSize="18sp"
        android:layout_marginTop="20dp" />

    <!-- Campo de entrada de texto para o nome -->
    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtHintName"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="40dp"
        android:inputType="textPersonName"
        android:padding="10dp" />

    <!-- Botão "Começar!" -->
    <Button
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtBtnStart"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="#006400"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold" />


</LinearLayout>