<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".asks.AskEletricity"
    android:fillViewport="true"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <ImageButton
            android:id="@+id/btnVoltar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:layout_marginBottom="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/dcspbackArrow"
            android:padding="8dp"
            android:src="@drawable/left"
            android:scaleType="fitCenter"/>

        <TextView
            android:id="@+id/txtEletricidade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtEletricidade"
            android:textColor="#FFE134"
            android:textSize="44sp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:textAlignment="center" />

        <ImageView
            android:id="@+id/imgEletricity"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/eletricidade"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="0dp"/>

        <TextView
            android:id="@+id/txtAparelhos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtAparelhos"
            android:textSize="20sp"
            android:layout_marginBottom="8dp"
            android:textColor="#FFE134" />

        <Spinner
            android:id="@+id/spinnerAparelhos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/arrayPerguntaAparelho"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/txtTempo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtTempo"
            android:textSize="20sp"
            android:layout_marginBottom="8dp"
            android:textColor="#FFE134" />

        <EditText
            android:id="@+id/edtTempo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/txtHintTempo"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="10dp"/>

        <!-- Botão para adicionar dispositivo à lista -->
        <Button
            android:id="@+id/btnAdicionar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtBtnAdicionar"
            android:layout_marginTop="20dp"
            android:backgroundTint="#FFE134"
            android:layout_gravity="center"
            android:background="@drawable/rounded_button"
            android:textColor="#FFFFFF"
            android:layout_marginBottom="10dp" />

        <!-- Lista de dispositivos adicionados -->
        <TextView
            android:id="@+id/txtSelecionados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtSelecionados"
            android:textSize="20sp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:textColor="#FFE134" />

        <LinearLayout
            android:id="@+id/deviceList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <!-- Botão de cálculo -->
        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtBtnCalcularCarbono"
            android:layout_marginTop="20dp"
            android:backgroundTint="#FFE134"
            android:layout_gravity="center"
            android:background="@drawable/rounded_button"
            android:textColor="#FFFFFF"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>

</ScrollView>